--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,7 +14,10 @@
             <div th:unless="${@thymeleafUtils.fragmentExists('fragments/header')}" class="container mt-4">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
                     <div class="container-fluid">
-                        <a class="navbar-brand" href="/">Blog</a>
+                        <a class="navbar-brand d-flex align-items-center" href="/">
+                            <img th:src="@{/images/logo.png}" alt="Blog Logo" height="40" class="me-2">
+
+                        </a>
                         <div class="collapse navbar-collapse">
                             <ul class="navbar-nav ms-auto">
                                 <li class="nav-item">
@@ -37,7 +40,8 @@
                             <div class="card-header">
                                 <h1 class="card-title">Connexion</h1>
                             </div>
-                            <div class="card-body">
+                            <div class="card-body text-center">
+                                <img th:src="@{/images/logo.png}" alt="Blog Logo" height="50" class="mb-3">
                                 <div th:if="${param.error}" class="alert alert-danger">
                                     Nom d'utilisateur ou mot de passe incorrect.
                                 </div>
